--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "include": ["src"],
   "compilerOptions": {
     "outDir": "build",
-    "target": "ES6"
+    "target": "ES6",
+    "lib": ["ES6"],
+    "strict": true,
+    "esModuleInterop": true,
+    "module": "CommonJS"
   }
 }
 
